Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14788

System versioning cannot be based on local timestamps, as it is now

    XMLWordPrintable

Details

    Description

      As previously discussed, currently system versioning is based on local (session) timestamps. It cannot be so, because session values can be changed by any user, intentionally or not, so the history is easy for anyone to tamper with.

      I'm creating this report to make sure that the issue is addressed before system versioning is released. It doesn't mean it must be fixed before the beta release, but at least the decision must be made on how to deal with it, so that it doesn't turn out that incompatible changes are required which are not allowed for post-beta.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - Not Specified
                Not Specified
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.