MDEV-14788 System versioning cannot be based on local timestamps, as it is now

use system time, not @@timestamp