sql/table.h
@@ -1588,6 +1588,7 @@ public:
 
   int delete_row();
   void vers_update_fields();
+  void vers_update_end();
 
 /** Number of additional fields used in versioned tables */
 #define VERSIONING_FIELDS 2
